Fixed bugs. Added TaskGroupController and all required changes for it.

--- a/com.pgs.todo/src/main/resources/templates/projects.html
+++ b/com.pgs.todo/src/main/resources/templates/projects.html
@@ -4,17 +4,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Todo App: projects</title>
-  <link rel="stylesheet" href="https://igoradamenko.github.io/awsm.css/css/awsm.css/awsm.min.css">
+  <link rel="stylesheet" href="https://igoradamenko.github.io/awsm.css/css/awsm.min.css">>
   <style>
-    .Bd{
+    .Bd {
       border: solid 1px black;
+    }
+
+    .Bdc\(red\) {
+      border-color: red !important;
+    }
+
+    .C\(red\) {
+      color: red;
     }
 
     .P\(0\) {
       padding: 0;
     }
 
-    .P\(10\) {
+    .P\(10px\) {
       padding: 10px;
     }
   </style>
@@ -23,29 +31,36 @@
 <main>
   <!--/*@thymesVar id="#message" type="java.lang.String"*/-->
   <h1 th:if="${message != null}" th:text="${message}"></h1>
-  <!--/*@thymesVar id="projects" type="java.util.List<com.pgs.task.model.Project>"*/-->
+  <!--/*@thymesVar id="projects" type="java.util.List<com.pgs.todo.model.Project>"*/-->
   <dl th:each="project : ${projects}" class="Bd P(10px)">
     <dt th:text="${project.description}">...</dt>
     <dd>
-      <ul>
-        <li th:each="step : ${project.steps}" th:text="|${step.description} (${step.daysToDeadline} days)|"></li>
+      <ul class="P(0)">
+        <li th:each="step : ${project.steps}" th:text="|${step.description} (${step.daysToDeadline} dni)|"></li>
       </ul>
+      <form action="#" method="post" th:action="@{/projects/{projectId}(projectId=${project.id})}">
+        <label>Deadline
+          <input name="deadline" type="datetime-local" pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}T[0-9]{2}:[0-9]{2}">
+        </label>
+        <button type="submit">Create tasks >></button>
+      </form>
     </dd>
   </dl>
   <fieldset>
     <legend> New project</legend>
-    <!--/*@thymesVar id="project" type="com.pgs.task.model.projection.ProjectWriteModel"*/-->
+    <!--/*@thymesVar id="project" type="com.pgs.todo.model.projection.ProjectWriteModel"*/-->
     <form action="#" method="post" th:action="@{/projects}" th:object="${project}">
+      <p class="C(red)" th:if="${#fields.hasAnyErrors()}" th:errors="*{all}"></p>
       <label> Description
-        <input type="text" th:field="*{description}"/>
+        <input type="text" th:field="*{description}" th:errorclass="'Bdc(red)'"/>
       </label>
       <fieldset th:each="step,stepStat : *{steps}">
-        <legend th:text="|Krok ${stepStat.index + 1}|"></legend>
+        <legend th:text="|Step ${stepStat.index + 1}|"></legend>
         <label> Description
-          <input type="text" th:field="*{steps[__${stepStat.index}__].description}"/>
+          <input type="text" th:field="*{steps[__${stepStat.index}__].description}" th:errorclass="'Bdc(red)'" />
         </label>
         <label> Days to end project
-          <input type="number" th:field="*{steps[__${stepStat.index}__].daysToDeadline}"/>
+          <input type="number" th:field="*{steps[__${stepStat.index}__].daysToDeadline}" th:errorclass="'Bdc(red)'" />
         </label>
       </fieldset>
       <div>
