--- a/com.pgs.todo/src/main/resources/templates/projects.html
+++ b/com.pgs.todo/src/main/resources/templates/projects.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Todo App: projects</title>
-  <link rel="stylesheet" href="https://igoradamenko.github.io/awsm.css/css/awsm.min.css">>
+  <link rel="stylesheet" href="https://igoradamenko.github.io/awsm.css/css/awsm.min.css">
   <style>
     .Bd {
       border: solid 1px black;
@@ -31,14 +31,14 @@
 <main>
   <!--/*@thymesVar id="#message" type="java.lang.String"*/-->
   <h1 th:if="${message != null}" th:text="${message}"></h1>
-  <!--/*@thymesVar id="projects" type="java.util.List<com.pgs.todo.model.Project>"*/-->
+  <!--/*@thymesVar id="projects" type="java.util.List<com.pgs.task.model.Project>"*/-->
   <dl th:each="project : ${projects}" class="Bd P(10px)">
     <dt th:text="${project.description}">...</dt>
     <dd>
       <ul class="P(0)">
-        <li th:each="step : ${project.steps}" th:text="|${step.description} (${step.daysToDeadline} dni)|"></li>
+        <li th:each="step : ${project.steps}" th:text="|${step.description} (${step.daysToDeadline} days)|"></li>
       </ul>
-      <form action="#" method="post" th:action="@{/projects/{projectId}(projectId=${project.id})}">
+      <form action="#" method="post" th:action="@{/projects/{project_Id}(project_Id=${project.id})}">
         <label>Deadline
           <input name="deadline" type="datetime-local" pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}T[0-9]{2}:[0-9]{2}">
         </label>
@@ -48,7 +48,7 @@
   </dl>
   <fieldset>
     <legend> New project</legend>
-    <!--/*@thymesVar id="project" type="com.pgs.todo.model.projection.ProjectWriteModel"*/-->
+    <!--/*@thymesVar id="project" type="com.pgs.task.model.projection.ProjectWriteModel"*/-->
     <form action="#" method="post" th:action="@{/projects}" th:object="${project}">
       <p class="C(red)" th:if="${#fields.hasAnyErrors()}" th:errors="*{all}"></p>
       <label> Description
