-fixed bugs after merged branches

--- a/com.pgs.todo/src/main/resources/templates/index.html
+++ b/com.pgs.todo/src/main/resources/templates/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:sec=http://www.thymeleaf.org">
+<html lang="en" xmlns:sec="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Todo App</title>
+    <title>Todo Application</title>
     <link rel="stylesheet" href="https://igoradamenko.github.io/awsm.css/css/awsm.min.css">
 </head>
 <body>
 <header>
-    <h1>Todo App</h1>
+    <h1>Todo Application</h1>
     <p>Doing all the things!</p>
     <nav>
         <ul>
