--- a/com.pgs.todo/src/main/resources/templates/groups.html
+++ b/com.pgs.todo/src/main/resources/templates/groups.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Todo App: groups</title>
+  <title>Todo Application: groups</title>
   <link rel="stylesheet" href="https://igoradamenko.github.io/awsm.css/css/awsm.min.css">
   <style>
     .Bd {
