--- a/com.pgs.todo/src/main/resources/templates/projects.html
+++ b/com.pgs.todo/src/main/resources/templates/projects.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Todo App: projects</title>
+  <title>Todo Application: projects</title>
   <link rel="stylesheet" href="https://igoradamenko.github.io/awsm.css/css/awsm.min.css">
   <style>
     .Bd {
@@ -29,7 +29,7 @@
 </head>
 <body>
 <main>
-  <!--/*@thymesVar id="#message" type="java.lang.String"*/-->
+  <!--/*@thymesVar id="message" type="java.lang.String"*/-->
   <h1 th:if="${message != null}" th:text="${message}"></h1>
   <!--/*@thymesVar id="projects" type="java.util.List<com.pgs.task.model.Project>"*/-->
   <dl th:each="project : ${projects}" class="Bd P(10px)">
@@ -38,7 +38,7 @@
       <ul class="P(0)">
         <li th:each="step : ${project.steps}" th:text="|${step.description} (${step.daysToDeadline} days)|"></li>
       </ul>
-      <form action="#" method="post" th:action="@{/projects/{project_Id}(project_Id=${project.id})}">
+      <form action="#" method="post" th:action="@{/projects/{projectId}(projectId=${project.id})}">
         <label>Deadline
           <input name="deadline" type="datetime-local" pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}T[0-9]{2}:[0-9]{2}">
         </label>
@@ -47,20 +47,22 @@
     </dd>
   </dl>
   <fieldset>
-    <legend> New project</legend>
+    <legend>New project</legend>
     <!--/*@thymesVar id="project" type="com.pgs.task.model.projection.ProjectWriteModel"*/-->
     <form action="#" method="post" th:action="@{/projects}" th:object="${project}">
-      <p class="C(red)" th:if="${#fields.hasAnyErrors()}" th:errors="*{all}"></p>
-      <label> Description
-        <input type="text" th:field="*{description}" th:errorclass="'Bdc(red)'"/>
+      <p class="C(red)" th:if="${#fields.hasAnyErrors()}" th:errors="*{'all'}"></p>
+      <label>Description
+        <input type="text" th:field="*{description}" th:errorclass="'Bdc(red)'" />
       </label>
       <fieldset th:each="step,stepStat : *{steps}">
-        <legend th:text="|Step ${stepStat.index + 1}|"></legend>
-        <label> Description
-          <input type="text" th:field="*{steps[__${stepStat.index}__].description}" th:errorclass="'Bdc(red)'" />
+        <legend th:text="|Krok ${stepStat.index + 1}|"></legend>
+        <label>Description
+          <input type="text" th:field="*{steps[__${stepStat.index}__].description}"
+                 th:errorclass="'Bdc(red)'" />
         </label>
-        <label> Days to end project
-          <input type="number" th:field="*{steps[__${stepStat.index}__].daysToDeadline}" th:errorclass="'Bdc(red)'" />
+        <label>Days to end project
+          <input type="number" th:field="*{steps[__${stepStat.index}__].daysToDeadline}"
+                 th:errorclass="'Bdc(red)'" />
         </label>
       </fieldset>
       <div>
